file(GLOB_RECURSE CODES_HEADER_FILES include/*.hpp)
#file(GLOB_RECURSE CODES_SOURCE_FILES src/*.cpp)
if(PAR_VERSION)
    message("Including sources for parallel executables of the codes directory...")
    add_subdirectory(Par_version)
else()
    message("Including sources for sequential executables of the codes directory...")
    add_subdirectory(Seq_version)
endif()